--- a/audios.html
+++ b/audios.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Videos</title>
+        <link rel="stylesheet" href="checkpoint.css">
     </head>
     <body>
         <nav>
