--- a/checkpoint.html
+++ b/checkpoint.html
@@ -2,20 +2,24 @@
 <html>
     <head>
         <title>CHECKPOINT HTML</title>
+        <link rel="stylesheet" href="checkpoint.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <nav>
-           <ul> <a href="checkpoint.html">Home</a>
-            <a href="contactus.html">CONTACT US</a>
+                <a href="checkpoint.html" >Home</a>
+                <a href="contactus.html"id="a">CONTACT US</a>
+        </table>
         </nav>
-        <h1>Welcome to HTML CHECKPOINT</h1>
+        <h1>WELCOME TO HTML CHECKPOINT</h1>
         <hr>
         <nav>
-        <a href="videos.html">Videos</a>
-        <a href="audios.html">Audios</a>
+        <a href="videos.html" id="b">Videos</a>
+        <a href="audios.html">Audios</a><br>
 
     </nav><br>
-        <img src="C:/Users/HP/OneDrive/Bureau/AA/html.PNG">
+        <img src="C:/Users/HP/OneDrive/Bureau/AA/html.PNG" id="im">
         <h2>Introducing HTML:</h2>
         <p> HTML stands for Hyper Text Markup Language <br>
             HTML is the standard markup language for creating Web pages<br>
@@ -25,7 +29,7 @@
             HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link", etc.
         </p>
         <h2>Tags and infos:</h2>
-        <table border="1">
+        <table border="1" id="tb">
             <tr><th>TAG</th>
                 <th>INFO</th>
             </tr>
@@ -67,7 +71,7 @@
              <td><input type="date"></td>
          </tr>
          <tr>
-             <td><input type="submit" value="SEND"></td>
+             <td><input type="submit" value="SEND" id="bt"></td>
          </tr>
         </table>
         </form>
