--- a/contactus.html
+++ b/contactus.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>Videos</title>
+        <link rel="stylesheet" href="checkpoint.css">
     </head>
     <body>
         <nav>
-            <a href="checkpoint.html">Home</a>
+            <a href="checkpoint.html" id="a">Home</a>
         </nav>
         <fieldset>
             <legend>CONTACT</legend><br>
@@ -20,10 +21,10 @@
 </tr>
 <tr>
    <td><label>WRITE HERE:</label></td>
-    <td><textarea placeholder="TYPE YOUR DECLARATION"  ></textarea></td>
+    <td><textarea placeholder="TYPE YOUR DECLARATION"  rows="7" cols="30"></textarea></td>
 </tr>
-     <td><input type="submit" value="SEND"></td>
-     <td><input type="reset" value="RESET"></td>
+     <td><input type="submit" value="SEND" id="bt"></td>
+     <td><input type="reset" value="RESET" id="bt"></td>
  </tr>
 </table>
 </form>
